Fixing some of the html validation issues for patients index  * application.html.erb - tidied some of the spacing  * patients/index.html.erb - missing a final div  * lib/sort_order#link_to_sort_order() - had an anchor (inline) wrapping a div (block), reversed this and fixed the stylesheet to match

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -300,7 +300,7 @@ table#dashboard a {
 	color:#424242;
 }
 
-#dashboard th.sortable div {
+#dashboard th div.sortable {
 	background:url(/images/lightarrow.png) no-repeat right;
 }
 
